fix: Make navbar sticky, transparent, routed, and spacing

--- a/src/app/HomePage.css
+++ b/src/app/HomePage.css
@@ -4,6 +4,13 @@ body {
 
 .home-page-content {
   width: 100%;
+  padding-top: 100px;
+  background: radial-gradient(
+    80.72% 78.16% at 42.05% 34.86%,
+    #05365f 19.71%,
+    #041c39 59.86%,
+    #030213 100%
+  );
 }
 
 .product-overview,
@@ -18,13 +25,6 @@ body {
 }
 
 .product-overview {
-  background: radial-gradient(
-    80.72% 78.16% at 42.05% 34.86%,
-    #05365f 19.71%,
-    #041c39 59.86%,
-    #030213 100%
-  );
-  /* background z index */
   height: 100vh;
   z-index: 0;
 }
